--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.3",
     "sass": "^1.92.1"
   },
   "devDependencies": {
