--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.3",
+    "react-router-dom": "^7.9.3",
+    "router": "^2.2.0",
     "sass": "^1.92.1"
   },
   "devDependencies": {
